<resources>
    <string name="app_name" translatable="false">Projet CCM 2021</string>
    <string name="name1" translatable="false">POISOT Romain</string>
    <string name="name2" translatable="false">PAQUEREAU Yoann</string>
    <string name="ville" translatable="false">Lille</string>
    <string name="classe" translatable="false">Master CCM</string>
    <string name="poste1">Développeur PHP/JavaScript à Conectis</string>
    <string name="poste2">Développeur Symfony chez Ganti</string>
    <string name="buttonApi">API Liste</string>
    <string name="buttonLogin">Se connecter</string>
    <string name="buttonAdd">Ajouter</string>
    <string name="buttonDelete">Supprimer</string>
    <string name="password">Mot de passe</string>
    <string name="loginText">Vous avez déjà un compte ?</string>
    <string name="registerText">Vous n\'avez pas encore de compte ?</string>
    <string name="register">S\'inscrire</string>
    <string name="email" translatable="false">Email</string>
    <string name="buttonLogout">Se déconnecter</string>
</resources>